<resources>
    <string name="app_name">NTurn</string>
    <string name="login">Login</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="vechile_turn">Vechile Turn</string>
    <string name="or_create_new_account">or create new account</string>
    <string name="car_services">Car Services</string>
    <string name="emergency_car_service">Emergency Car Service</string>
    <string name="add_car">Add Car</string>
    <string name="todo">TODO</string>
    <string name="car_brand">Car Brand</string>
    <string name="car_model">Car Model</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="car_number">Car Number</string>
    <string name="heading">heading</string>
    <string name="vechile_wash">Vechile Wash</string>
    <string name="full_cleaning_of_vechile_starting_from_air_brusing_to_soap_clean">Full cleaning of vechile starting from air brusing to soap clean</string>
    <string name="_10_wash">£10/Wash</string>
    <string name="spare_parts_fitting">Spare Parts Fitting</string>
    <string name="end_to_end_checkup_and_oil_change">End to end checkup and oil change</string>
    <string name="_50_visit_charges">£50/Visit+ Charges</string>
    <string name="_10_200">£10-£200</string>
    <string name="_70_of_vechiles_spare_parts_are_available">70% of vechiles spare parts are available</string>
    <string name="general_service">General Service</string>
    <string name="choose_your_service">Choose Your Service</string>
    <string name="submit_service">Submit Service</string>
    <string name="select_car">Select Car</string>
    <string name="enter_details">Enter Details</string>
    <string name="tommarow">Tommarow</string>
    <string name="today">Today</string>
    <string name="tommorow">tommorow</string>
    <string name="textview">TextView</string>
    <string name="title_activity_maps">Map</string>
    <string name="get_emergency_service">Get Emergency Service</string>
    <string name="getting_emergency_services_to_your_location">Getting Emergency Services to your Location</string>
    <string name="logout">Logout</string>
</resources>
